# mangos-wotlk

./: CMakeLists.txt  meson.build  meson_options.txt
.github/workflows/: macos.yml  ubuntu-release.yml
contrib/extractor/: System.cpp
contrib/extractor/loadlib/: adt.cpp  adt.h  loadlib.cpp  loadlib.h  wdt.cpp  wdt.h
contrib/recastdemomod/: meson.build
contrib/recastdemomod/Include/: CMaNGOS_Map.h  GeomData.h  MMapData.h
dep/recastnavigation/: meson.build
dep/recastnavigation/DebugUtils/: meson.build
dep/recastnavigation/DetourCrowd/: meson.build
dep/recastnavigation/DetourTileCache/: meson.build
sql/base/dbc/cmangos_fixes/: Spell.sql
sql/scriptdev2/: scriptdev2.sql  spell.sql
sql/updates/sqlite/characters/: 14061_01_characters_fishingSteps.sql
sql/updates/sqlite/mangos/: 14082_01_mangos_spell_template.sql
sql/updates/sqlite/realmd/: 14083_01_realmd_joindate_datetime.sql
src/framework/: meson.build
src/game/: meson.build
src/game/AI/ScriptDevAI/base/: CombatAI.cpp  CombatAI.h  TimerAI.cpp  TimerAI.h
src/game/AI/ScriptDevAI/scripts/custom/: helpernpc.cpp
src/game/AI/ScriptDevAI/scripts/northrend/naxxramas/: boss_anubrekhan.cpp  boss_faerlina.cpp  boss_four_horsemen.cpp  boss_gluth.cpp  boss_gothik.cpp  boss_grobbulus.cpp  boss_heigan.cpp  boss_kelthuzad.cpp  boss_loatheb.cpp  boss_maexxna.cpp  boss_noth.cpp  boss_patchwerk.cpp  boss_razuvious.cpp  boss_sapphiron.cpp  boss_thaddius.cpp  instance_naxxramas.cpp  naxxramas.h
src/game/AI/ScriptDevAI/scripts/northrend/obsidian_sanctum/: boss_sartharion.cpp
src/game/AI/ScriptDevAI/scripts/northrend/ulduar/ulduar/: ulduar.cpp
src/game/AI/ScriptDevAI/scripts/world/: go_scripts.cpp
src/game/AI/ScriptDevAI/system/: ScriptLoader.cpp
src/game/Accounts/: AccountMgr.cpp
src/game/Achievements/: AchievementMgr.cpp
src/game/Calendar/: Calendar.cpp
src/game/Chat/: Channel.cpp  Chat.cpp  Chat.h  Level2.cpp  Level3.cpp
src/game/Entities/: CharacterHandler.cpp  Corpse.cpp  Creature.cpp  GameObject.cpp  GameObject.h  MiscHandler.cpp  NPCHandler.cpp  Player.cpp  Player.h  QueryHandler.cpp  StatSystem.cpp  Taxi.cpp  Unit.cpp  Unit.h  Vehicle.cpp
src/game/GMTickets/: GMTicketMgr.cpp
src/game/GameEvents/: GameEventMgr.cpp
src/game/Globals/: ObjectMgr.cpp  ObjectMgr.h  SharedDefines.h
src/game/Groups/: GroupHandler.cpp
src/game/Maps/: MapPersistentStateMgr.cpp
src/game/MotionGenerators/: TargetedMovementGenerator.cpp
src/game/Server/: WorldSocket.cpp
src/game/Spells/: Spell.cpp  Spell.h  SpellAuras.cpp  SpellEffects.cpp  SpellTargets.cpp  UnitAuraProcHandler.cpp
src/game/Spells/Scripts/Scripting/ClassScripts/: DeathKnight.cpp  Paladin.cpp  Warlock.cpp  Warrior.cpp
src/game/Trade/: TradeHandler.cpp
src/game/Weather/: Weather.cpp  Weather.h
src/game/World/: World.cpp
src/mangosd/: Master.cpp  meson.build
src/realmd/: AuthSocket.cpp  CMakeLists.txt  Main.cpp  meson.build
src/shared/: meson.build
src/shared/Database/: Database.cpp  Database.h  DatabaseEnv.h  DatabaseMysql.cpp  DatabaseMysql.h  DatabaseSqlite.cpp  DatabaseSqlite.h  Field.h  QueryResultSqlite.cpp  QueryResultSqlite.h
